# twaddle

./: .gitignore  default.nix  result  twaddle.cabal
assets/: style.css
client/: Main.hs  client.cabal  result
common/: LICENSE  common.cabal  common.nix  default.nix  result
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
nix/: cache.nix  nixpkgs.nix  release.nix
server/: Main.hs  default.nix  result  server.cabal  server.nix
shared/: Common.hs
