name:                twaddle
version:             0.1.0.0
-- synopsis:            https://haskell-miso.org
description:         Secure chat in your browser
-- homepage:            https://haskell-miso.org
license:             BSD3
license-file:        LICENSE
author:              Nikita Aleshchenko
maintainer:          supercreed2@gmail.com
copyright:           Nikita Aleshchenko (c) 2020
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable server
  main-is:
    Main.hs
  if impl(ghcjs)
    buildable: False
  else
    ghc-options:
      -O2 -threaded -Wall -rtsopts
    hs-source-dirs:
      server, shared
    build-depends:
      base < 5,
      servant,
      servant-server,
      wai,
      warp,
      miso,
      lucid,
      wai-app-static,
      servant-lucid,
      aeson,
      bytestring,
      cryptonite,
      text,
      network,
      splitmix
    default-language:
      Haskell2010

executable client
  main-is:
    Main.hs
  if !impl(ghcjs)
    buildable: False
  else
    ghcjs-options:
      -dedupe -DGHCJS_GC_INTERVAL=5000
    hs-source-dirs:
      client, shared
    build-depends:
      base < 5,
      miso,
      servant,
      bytestring,
      aeson,
      text
    default-language:
      Haskell2010
